--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "@astrojs/mdx": "^4.0.2",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.0.4"
+    "@astrojs/vue": "^5.0.1",
+    "@tresjs/cientos": "^4.0.3",
+    "@tresjs/core": "^4.3.1",
+    "astro": "^5.0.4",
+    "three": "^0.171.0",
+    "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "vite-plugin-glsl": "^1.3.1"
   }
 }
